openmediavault (0.2.5.7) stable; urgency=low

  * Add environment variable OMV_HTTPREQUEST_TIMEOUT to modify the WebGUI HTTP
    request timeout. Defaults to 60000 milliseconds.
  * Improve monitoring implementation (via monit)
  * Mantis 0000294: creating two smb shares with the same name on two
    shared folders
  * Mantis 0000300: Change bond mode fails and requires reboot
  * Mantis 0000303: Samba log settings prevent non-error logging
  * Mantis 0000306: Diagnostics - System logs do not display correct order
    of column 'Date & Time'

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 28 Nov 2011 12:53:20 +0100

openmediavault (0.2.5.6) stable; urgency=low

  * Make sure a rsync cron job is not executed while it is still running.
  * Mantis 0000272: Allow handleResponse in OMVDownloadRpcServer to accept
    a content-type
  * Mantis 0000287: After upgrade to 0.2.5.5, system graph are not refreshed
    anymore

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 22 Nov 2011 21:14:42 +0100

openmediavault (0.2.5.5) stable; urgency=low

  * Improve monitoring feature.
  * Mantis 0000044: Request confirmation to delete shared folder content.
  * Mantis 0000269: hdparm - change config from "/dev/xxx" to "/dev/disk/by-id".
    The same applies to smartd.conf.
  * Mantis 0000272: Allow handleResponse in OMVDownloadRpcServer to accept
    a content-type
  * Mantis 0000275: RPC call to System::noop sometimes throws exception
  * Mantis 0000276: Configure monit load average based on detected CPU's
  * Mantis 0000281: When editing NFS share which was set with read-write, the
    menu drops back to read-only
  * Mantis 0000283: Min UID/GID

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 18 Nov 2011 21:27:13 +0100

openmediavault (0.2.5.4) stable; urgency=low

  * Add ability to enable/disable Cron/RSync jobs.
  * Disable purging man pages in Dpkg Post-Invoke by default. This can be